# mc-anvil-db

./: .dockerignore  .env  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  compose.yml  entrypoint.sh
docs/: CODE_STRUCTURE.md  CONFIGURATION.md  optimization_plan.md
hoppermc/: Cargo.toml
hoppermc-anvil/: Cargo.toml
hoppermc-anvil/src/: lib.rs
hoppermc-benchmark/: Cargo.toml
hoppermc-benchmark/src/: lib.rs
hoppermc-fs/: Cargo.toml
hoppermc-fs/src/: lib.rs  virtual_file.rs
hoppermc-gen/: Cargo.toml
hoppermc-gen/src/: builder.rs  flat.rs  lib.rs  vanilla.rs
hoppermc-storage/: Cargo.toml
hoppermc-storage/src/: lib.rs  nbt_json.rs  postgres.rs
hoppermc/src/: main.rs
src/: main.rs  nbt.rs
src/chunk/: generator.rs  mod.rs
src/fuse/: inode.rs  mod.rs
src/region/: header.rs  mod.rs
src/storage/: memory.rs  mod.rs  postgres.rs
