[package]
name = "hoppermc-gen"
version = "0.0.6-pre5"
edition = "2024"

[dependencies]
hoppermc-anvil = { path = "../hoppermc-anvil" }
pumpkin-world = { workspace = true }
pumpkin-data = { workspace = true }
pumpkin-util = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
fastnbt = { workspace = true }
hoppermc-benchmark = { path = "../hoppermc-benchmark" }
rayon = "1.10"
