[package]
name = "hoppermc-storage"
version = "0.0.6-pre6"
edition = "2024"

[dependencies]
tokio-postgres = { workspace = true }
deadpool-postgres = { workspace = true }
# postgis = { workspace = true } # unused for now
# hex = { workspace = true } # unused for now
anyhow = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
fastnbt = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = "0.1"
