[package]
name = "hoppermc"
version = "0.0.6-pre3"
edition = "2024"

[dependencies]
hoppermc-fs = { path = "../hoppermc-fs" }
hoppermc-gen = { path = "../hoppermc-gen" }
hoppermc-storage = { path = "../hoppermc-storage" }
clap = { workspace = true, features = ["env"] }
tokio = { workspace = true }
env_logger = { workspace = true }
fuser = { workspace = true }
hoppermc-benchmark = { path = "../hoppermc-benchmark" }
